feat: add index inserimento dati cliente

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
     <title>Generatore Biglietti Treno</title>
   </head>
   <body>
+    <header></header>
+    <main>
+      <div class="container text-center">
+        <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+        <div class="row">
+          <div class="col">Nome Cognome</div>
+          <div class="col">Km da percorrere</div>
+          <div class="col">Fascia d'età</div>
+          <div class="block-btn">
+            <button class="btn">Genera</button>
+            <button class="btn">Annulla</button>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+    <!-- Import JS -->
     <script src="js/script.js"></script>
+    <!-- /Import JS -->
   </body>
 </html>
