--- a/index.html
+++ b/index.html
@@ -33,15 +33,44 @@
   <body>
     <header></header>
     <main>
-      <div class="container text-center">
-        <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
-        <div class="row">
-          <div class="col">Nome Cognome</div>
-          <div class="col">Km da percorrere</div>
-          <div class="col">Fascia d'età</div>
-          <div class="block-btn">
-            <button class="btn">Genera</button>
-            <button class="btn">Annulla</button>
+         <div class="container text-center">
+      <h1 class="my-3">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+      <div class="card">
+        <div class="row mt-3 justify-content-center">
+          <div class="col-3">
+            <label for="name" class="form-label">Nome e Cognome</label>
+            <input
+              type="text"
+              class="form-control text-center"
+              id="name"
+              placeholder="inserisci il tuo nome"
+            />
+            <!-- Inserire messaggio d'errore se non si inseriscono caratteri -->
+          </div>
+          <div class="col-3">
+            <label for="km" class="form-label">Km da percorrere</label>
+            <input
+              type="number"
+              class="form-control text-center"
+              id="km"
+              placeholder="inserisci i Km"
+            />
+          </div>
+          <div class="col-2">
+            <label for="age" class="form-label">Fascia d'età</label>
+            <select
+              id="age"
+              class="form-select form-select-"
+              aria-label="Small select example"
+            >
+              <option value="Minorenne">Minorenne</option>
+              <option value="Standard">Maggiorenne</option>
+              <option value="Over65">Over 65</option>
+            </select>
+          </div>
+          <div class="block-btn my-5">
+            <button id="btn-gener" class="btn btn-success">Genera</button>
+            <button id="cancel" class="btn btn-danger">Annulla</button>
           </div>
         </div>
       </div>
